--- a/03- webpack-initial/package.json
+++ b/03- webpack-initial/package.json
@@ -10,6 +10,8 @@
   "author": "FoxtrotCN",
   "license": "ISC",
   "devDependencies": {
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
