--- a/03- webpack-initial/package.json
+++ b/03- webpack-initial/package.json
@@ -12,6 +12,9 @@
   "author": "FoxtrotCN",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
